--- a/app/public/home.html
+++ b/app/public/home.html
@@ -33,7 +33,7 @@
   
       <footer class="footer">
         <div class="container">
-          <p><a href="/friends">API Friends List</a> | <a href="https://github.com/Dkaytor/FriendFinder">GitHub Repo</a></p>
+          <p><a href="api/friends">API Friends List</a> | <a href="https://github.com/Dkaytor/FriendFinder">GitHub Repo</a></p>
         </div>
       </footer>
   
